--- a/package.json
+++ b/package.json
@@ -1,23 +1,50 @@
 {
-  "name": "lc-management",
+  "name": "reservation-pc-seat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "dotenv -e .env.production npx prisma generate && npx prisma migrate deploy && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev --name init",
+    "prisma-studio": "dotenv -e .env.development -- npx prisma studio"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
-    "@types/node": "18.11.18",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@next/font": "13.1.4",
+    "@prisma/client": "^4.9.0",
+    "@react-icons/all-files": "^4.1.0",
+    "@supabase/auth-helpers-nextjs": "^0.5.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.4.1",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "next": "13.1.6",
+    "date-fns-tz": "^1.3.7",
+    "dayjs": "^1.11.7",
+    "dotenv-cli": "^7.0.0",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.4",
+    "framer-motion": "^8.5.0",
+    "next": "13.1.4",
+    "prisma": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.7.1",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0",
+    "server-only": "^0.0.1",
+    "swr": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "dotenv -e .env.development -- node --loader ts-node/esm prisma/seed.ts"
   }
 }
