--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# env
+.env
+.env.production
+.env.test
+
+# これを入れる必要はなさそう
+.env.development
